--- a/chess/src/App.css
+++ b/chess/src/App.css
@@ -81,6 +81,14 @@
   border-radius: 10px;
 }
 
+.searching {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .test {
   cursor: grab;
   width: 100%;
