--- a/chess/src/App.css
+++ b/chess/src/App.css
@@ -82,9 +82,11 @@
 }
 
 .searching {
+  background-color: rgb(34,34,34);
+  color: white;
+  display: flex;
   width: 100%;
   height: 100%;
-  display: flex;
   align-items: center;
   justify-content: center;
 }
@@ -96,4 +98,18 @@
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.opponentUsernameBox {
+  background-color: rgb(34,34,34);
+  color: white;
+  display: flex;
+  align-items: center;
+}
+
+.myUsernameBox {
+  background-color: rgb(34,34,34);
+  display: flex;
+  align-items: center;
+  color: white;
 }
