--- a/chess/src/App.css
+++ b/chess/src/App.css
@@ -113,3 +113,17 @@
   align-items: center;
   color: white;
 }
+
+.returnButton {
+  background-color: rgb(34,34,34);
+  color: white;
+  display: flex;
+  width: 100%;
+  height: 100 px;
+  align-items: center;
+  justify-content: center;
+
+  padding: 28px 28px;
+  cursor: pointer;
+  background: rgb(63,63,63);
+}
